# sturdy-meme

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  VULKAN_HPP_MIGRATION_PLAN.md  build-claude.sh  plan.md  run-claude.sh  setup-claude.sh  vcpkg.json
tools/town_generator/: CMakeLists.txt  main.cpp
tools/town_generator/building/: CurtainWall.cpp  Model.hpp
tools/town_generator/geom/: Circle.hpp  GeomUtils.hpp  Graph.hpp  Polygon.hpp  Spline.hpp
tools/town_generator/include/town_generator/building/: Block.h  Canal.h  CurtainWall.h  Cutter.h  District.h  EdgeData.h  Landmark.h  Model.h  Patch.h  Topology.h  WardGroup.h
tools/town_generator/include/town_generator/geom/: Chaikin.h  Circle.h  DCEL.h  GeomUtils.h  Graph.h  Point.h  PoissonPattern.h  PolyBool.h  Polygon.h  Segment.h  SkeletonBuilder.h  Spline.h  Voronoi.h
tools/town_generator/include/town_generator/rendering/: Brush.h  CityMap.h  Palette.h  SVGWriter.h
tools/town_generator/include/town_generator/svg/: SVGWriter.h
tools/town_generator/include/town_generator/utils/: Forester.h  MathUtils.h  PathTracker.h  Random.h
tools/town_generator/include/town_generator/wards/: AdministrationWard.h  Castle.h  Cathedral.h  CommonWard.h  CraftsmenWard.h  Farm.h  GateWard.h  Harbour.h  Market.h  MerchantWard.h  MilitaryWard.h  Park.h  PatriciateWard.h  Slum.h  Ward.h  Wilderness.h
tools/town_generator/mapping/: Brush.hpp  Palette.hpp
tools/town_generator/reference/: MFCG_CLEAN_MISSING.md  mfcg.js  rename_classes.py
tools/town_generator/reference/mfcg/: 01-jscomp.js  02-lime-init.js  03-howler.js  04-pako.js  05-lzma.js
tools/town_generator/reference/mfcg/lime-init/: 01-lime-openfl-base.js  03-geom-library.js  (+6 more)
tools/town_generator/src/: main.cpp
tools/town_generator/src/building/: Bisector.cpp  Block.cpp  Building.cpp  Canal.cpp  City.cpp  CurtainWall.cpp  Cutter.cpp  District.cpp  Landmark.cpp  Model.cpp  Patch.cpp  Topology.cpp  WardGroup.cpp
tools/town_generator/src/geom/: Circle.cpp  DCEL.cpp  GeomUtils.cpp  Graph.cpp  Point.cpp  Polygon.cpp  Segment.cpp  Spline.cpp  Voronoi.cpp
tools/town_generator/src/rendering/: Brush.cpp  CityMap.cpp  Palette.cpp  SVGWriter.cpp
tools/town_generator/src/svg/: SVGWriter.cpp
tools/town_generator/src/utils/: Bisector.cpp  Forester.cpp  MathUtils.cpp  Random.cpp
tools/town_generator/src/wards/: AdministrationWard.cpp  Castle.cpp  Cathedral.cpp  CommonWard.cpp  CraftsmenWard.cpp  Farm.cpp  GateWard.cpp  Harbour.cpp  Market.cpp  MerchantWard.cpp  MilitaryWard.cpp  Park.cpp  PatriciateWard.cpp  Slum.cpp  Ward.cpp  Wilderness.cpp
tools/town_generator/tests/: test_new_geometry.cpp
tools/town_generator/utils/: MathUtils.hpp  Random.hpp
tools/town_generator/wards/: AdministrationWard.hpp  Castle.hpp  Cathedral.hpp  CommonWard.hpp  CraftsmenWard.hpp  GateWard.hpp  MerchantWard.hpp  MilitaryWard.hpp  Park.hpp  PatriciateWard.hpp  Slum.hpp
(+1062 files in other folders)
